mux-compiler/tests/snapshots/parser_integration__legacy_ast_enum_nested_recursive_rc.snap
---
source: mux-compiler/tests/parser_integration.rs
---
[
    Enum {
        name: "Chain",
        type_params: [],
        variants: [
            EnumVariant {
                name: "Empty",
                data: None,
                where_clause: None,
            },
            EnumVariant {
                name: "Node",
                data: Some(
                    [
                        (
                            Some(
                                "label",
                            ),
                            TypeNode {
                                kind: Primitive(
                                    Str,
                                ),
                                span: Span,
                            },
                        ),
                        (
                            Some(
                                "rest",
                            ),
                            TypeNode {
                                kind: Named(
                                    "Chain",
                                    [],
                                ),
                                span: Span,
                            },
                        ),
                    ],
                ),
                where_clause: None,
            },
        ],
        span: Span,
    },
    Function(
        FunctionNode {
            name: "describe",
            type_params: [],
            params: [
                Param {
                    name: "c",
                    type_: TypeNode {
                        kind: Named(
                            "Chain",
                            [],
                        ),
                        span: Span,
                    },
                    default_value: None,
                },
            ],
            return_type: TypeNode {
                kind: Primitive(
                    Void,
                ),
                span: Span,
            },
            body: [
                StatementNode {
                    kind: Match {
                        expr: ExpressionNode {
                            kind: Identifier(
                                "c",
                            ),
                            span: Span,
                        },
                        arms: [
                            MatchArm {
                                pattern: Identifier(
                                    "Empty",
                                ),
                                guard: None,
                                body: [
                                    StatementNode {
                                        kind: Expression(
                                            ExpressionNode {
                                                kind: Call {
                                                    func: ExpressionNode {
                                                        kind: Identifier(
                                                            "print",
                                                        ),
                                                        span: Span,
                                                    },
                                                    args: [
                                                        ExpressionNode {
                                                            kind: Literal(
                                                                String(
                                                                    "end",
                                                                ),
                                                            ),
                                                            span: Span,
                                                        },
                                                    ],
                                                },
                                                span: Span,
                                            },
                                        ),
                                        span: Span,
                                    },
                                ],
                            },
                            MatchArm {
                                pattern: EnumVariant {
                                    name: "Node",
                                    args: [
                                        Identifier(
                                            "val",
                                        ),
                                        Identifier(
                                            "rest",
                                        ),
                                    ],
                                },
                                guard: None,
                                body: [
                                    StatementNode {
                                        kind: Expression(
                                            ExpressionNode {
                                                kind: Call {
                                                    func: ExpressionNode {
                                                        kind: Identifier(
                                                            "print",
                                                        ),
                                                        span: Span,
                                                    },
                                                    args: [
                                                        ExpressionNode {
                                                            kind: Identifier(
                                                                "val",
                                                            ),
                                                            span: Span,
                                                        },
                                                    ],
                                                },
                                                span: Span,
                                            },
                                        ),
                                        span: Span,
                                    },
                                    StatementNode {
                                        kind: Expression(
                                            ExpressionNode {
                                                kind: Call {
                                                    func: ExpressionNode {
                                                        kind: Identifier(
                                                            "describe",
                                                        ),
                                                        span: Span,
                                                    },
                                                    args: [
                                                        ExpressionNode {
                                                            kind: Identifier(
                                                                "rest",
                                                            ),
                                                            span: Span,
                                                        },
                                                    ],
                                                },
                                                span: Span,
                                            },
                                        ),
                                        span: Span,
                                    },
                                ],
                            },
                        ],
                    },
                    span: Span,
                },
                StatementNode {
                    kind: Return(
                        None,
                    ),
                    span: Span,
                },
            ],
            span: Span,
            is_common: false,
            where_clause: None,
        },
    ),
    Function(
        FunctionNode {
            name: "main",
            type_params: [],
            params: [],
            return_type: TypeNode {
                kind: Primitive(
                    Void,
                ),
                span: Span,
            },
            body: [
                StatementNode {
                    kind: AutoDecl(
                        "a",
                        TypeNode {
                            kind: Auto,
                            span: Span,
                        },
                        ExpressionNode {
                            kind: Call {
                                func: ExpressionNode {
                                    kind: FieldAccess {
                                        expr: ExpressionNode {
                                            kind: Identifier(
                                                "Chain",
                                            ),
                                            span: Span,
                                        },
                                        field: "Node",
                                    },
                                    span: Span,
                                },
                                args: [
                                    ExpressionNode {
                                        kind: Literal(
                                            String(
                                                "one",
                                            ),
                                        ),
                                        span: Span,
                                    },
                                    ExpressionNode {
                                        kind: Call {
                                            func: ExpressionNode {
                                                kind: FieldAccess {
                                                    expr: ExpressionNode {
                                                        kind: Identifier(
                                                            "Chain",
                                                        ),
                                                        span: Span,
                                                    },
                                                    field: "Node",
                                                },
                                                span: Span,
                                            },
                                            args: [
                                                ExpressionNode {
                                                    kind: Literal(
                                                        String(
                                                            "two",
                                                        ),
                                                    ),
                                                    span: Span,
                                                },
                                                ExpressionNode {
                                                    kind: Call {
                                                        func: ExpressionNode {
                                                            kind: FieldAccess {
                                                                expr: ExpressionNode {
                                                                    kind: Identifier(
                                                                        "Chain",
                                                                    ),
                                                                    span: Span,
                                                                },
                                                                field: "Node",
                                                            },
                                                            span: Span,
                                                        },
                                                        args: [
                                                            ExpressionNode {
                                                                kind: Literal(
                                                                    String(
                                                                        "three",
                                                                    ),
                                                                ),
                                                                span: Span,
                                                            },
                                                            ExpressionNode {
                                                                kind: FieldAccess {
                                                                    expr: ExpressionNode {
                                                                        kind: Identifier(
                                                                            "Chain",
                                                                        ),
                                                                        span: Span,
                                                                    },
                                                                    field: "Empty",
                                                                },
                                                                span: Span,
                                                            },
                                                        ],
                                                    },
                                                    span: Span,
                                                },
                                            ],
                                        },
                                        span: Span,
                                    },
                                ],
                            },
                            span: Span,
                        },
                    ),
                    span: Span,
                },
                StatementNode {
                    kind: AutoDecl(
                        "b",
                        TypeNode {
                            kind: Auto,
                            span: Span,
                        },
                        ExpressionNode {
                            kind: Identifier(
                                "a",
                            ),
                            span: Span,
                        },
                    ),
                    span: Span,
                },
                StatementNode {
                    kind: Expression(
                        ExpressionNode {
                            kind: Call {
                                func: ExpressionNode {
                                    kind: Identifier(
                                        "describe",
                                    ),
                                    span: Span,
                                },
                                args: [
                                    ExpressionNode {
                                        kind: Identifier(
                                            "a",
                                        ),
                                        span: Span,
                                    },
                                ],
                            },
                            span: Span,
                        },
                    ),
                    span: Span,
                },
                StatementNode {
                    kind: Expression(
                        ExpressionNode {
                            kind: Call {
                                func: ExpressionNode {
                                    kind: Identifier(
                                        "print",
                                    ),
                                    span: Span,
                                },
                                args: [
                                    ExpressionNode {
                                        kind: Literal(
                                            String(
                                                "---",
                                            ),
                                        ),
                                        span: Span,
                                    },
                                ],
                            },
                            span: Span,
                        },
                    ),
                    span: Span,
                },
                StatementNode {
                    kind: Expression(
                        ExpressionNode {
                            kind: Call {
                                func: ExpressionNode {
                                    kind: Identifier(
                                        "describe",
                                    ),
                                    span: Span,
                                },
                                args: [
                                    ExpressionNode {
                                        kind: Identifier(
                                            "b",
                                        ),
                                        span: Span,
                                    },
                                ],
                            },
                            span: Span,
                        },
                    ),
                    span: Span,
                },
                StatementNode {
                    kind: Return(
                        None,
                    ),
                    span: Span,
                },
            ],
            span: Span,
            is_common: false,
            where_clause: None,
        },
    ),
]
