mux-compiler/tests/snapshots/parser_integration__legacy_ast_enum_return_by_value.snap
---
source: mux-compiler/tests/parser_integration.rs
---
[
    Enum {
        name: "Status",
        type_params: [],
        variants: [
            EnumVariant {
                name: "Active",
                data: Some(
                    [
                        (
                            Some(
                                "reason",
                            ),
                            TypeNode {
                                kind: Primitive(
                                    Str,
                                ),
                                span: Span,
                            },
                        ),
                    ],
                ),
                where_clause: None,
            },
            EnumVariant {
                name: "Inactive",
                data: Some(
                    [
                        (
                            Some(
                                "code",
                            ),
                            TypeNode {
                                kind: Primitive(
                                    Int,
                                ),
                                span: Span,
                            },
                        ),
                    ],
                ),
                where_clause: None,
            },
        ],
        span: Span,
    },
    Function(
        FunctionNode {
            name: "make",
            type_params: [],
            params: [
                Param {
                    name: "label",
                    type_: TypeNode {
                        kind: Primitive(
                            Str,
                        ),
                        span: Span,
                    },
                    default_value: None,
                },
            ],
            return_type: TypeNode {
                kind: Named(
                    "Status",
                    [],
                ),
                span: Span,
            },
            body: [
                StatementNode {
                    kind: Return(
                        Some(
                            ExpressionNode {
                                kind: Call {
                                    func: ExpressionNode {
                                        kind: FieldAccess {
                                            expr: ExpressionNode {
                                                kind: Identifier(
                                                    "Status",
                                                ),
                                                span: Span,
                                            },
                                            field: "Active",
                                        },
                                        span: Span,
                                    },
                                    args: [
                                        ExpressionNode {
                                            kind: Identifier(
                                                "label",
                                            ),
                                            span: Span,
                                        },
                                    ],
                                },
                                span: Span,
                            },
                        ),
                    ),
                    span: Span,
                },
            ],
            span: Span,
            is_common: false,
            where_clause: None,
        },
    ),
    Function(
        FunctionNode {
            name: "passthrough",
            type_params: [],
            params: [
                Param {
                    name: "s",
                    type_: TypeNode {
                        kind: Named(
                            "Status",
                            [],
                        ),
                        span: Span,
                    },
                    default_value: None,
                },
            ],
            return_type: TypeNode {
                kind: Named(
                    "Status",
                    [],
                ),
                span: Span,
            },
            body: [
                StatementNode {
                    kind: Return(
                        Some(
                            ExpressionNode {
                                kind: Identifier(
                                    "s",
                                ),
                                span: Span,
                            },
                        ),
                    ),
                    span: Span,
                },
            ],
            span: Span,
            is_common: false,
            where_clause: None,
        },
    ),
    Function(
        FunctionNode {
            name: "report",
            type_params: [],
            params: [
                Param {
                    name: "s",
                    type_: TypeNode {
                        kind: Named(
                            "Status",
                            [],
                        ),
                        span: Span,
                    },
                    default_value: None,
                },
            ],
            return_type: TypeNode {
                kind: Primitive(
                    Void,
                ),
                span: Span,
            },
            body: [
                StatementNode {
                    kind: Match {
                        expr: ExpressionNode {
                            kind: Identifier(
                                "s",
                            ),
                            span: Span,
                        },
                        arms: [
                            MatchArm {
                                pattern: EnumVariant {
                                    name: "Active",
                                    args: [
                                        Identifier(
                                            "m",
                                        ),
                                    ],
                                },
                                guard: None,
                                body: [
                                    StatementNode {
                                        kind: Expression(
                                            ExpressionNode {
                                                kind: Call {
                                                    func: ExpressionNode {
                                                        kind: Identifier(
                                                            "print",
                                                        ),
                                                        span: Span,
                                                    },
                                                    args: [
                                                        ExpressionNode {
                                                            kind: Identifier(
                                                                "m",
                                                            ),
                                                            span: Span,
                                                        },
                                                    ],
                                                },
                                                span: Span,
                                            },
                                        ),
                                        span: Span,
                                    },
                                ],
                            },
                            MatchArm {
                                pattern: EnumVariant {
                                    name: "Inactive",
                                    args: [
                                        Identifier(
                                            "n",
                                        ),
                                    ],
                                },
                                guard: None,
                                body: [
                                    StatementNode {
                                        kind: Expression(
                                            ExpressionNode {
                                                kind: Call {
                                                    func: ExpressionNode {
                                                        kind: Identifier(
                                                            "print",
                                                        ),
                                                        span: Span,
                                                    },
                                                    args: [
                                                        ExpressionNode {
                                                            kind: Literal(
                                                                String(
                                                                    "inactive",
                                                                ),
                                                            ),
                                                            span: Span,
                                                        },
                                                    ],
                                                },
                                                span: Span,
                                            },
                                        ),
                                        span: Span,
                                    },
                                ],
                            },
                        ],
                    },
                    span: Span,
                },
                StatementNode {
                    kind: Return(
                        None,
                    ),
                    span: Span,
                },
            ],
            span: Span,
            is_common: false,
            where_clause: None,
        },
    ),
    Function(
        FunctionNode {
            name: "main",
            type_params: [],
            params: [],
            return_type: TypeNode {
                kind: Primitive(
                    Void,
                ),
                span: Span,
            },
            body: [
                StatementNode {
                    kind: AutoDecl(
                        "a",
                        TypeNode {
                            kind: Auto,
                            span: Span,
                        },
                        ExpressionNode {
                            kind: Call {
                                func: ExpressionNode {
                                    kind: Identifier(
                                        "make",
                                    ),
                                    span: Span,
                                },
                                args: [
                                    ExpressionNode {
                                        kind: Literal(
                                            String(
                                                "owned",
                                            ),
                                        ),
                                        span: Span,
                                    },
                                ],
                            },
                            span: Span,
                        },
                    ),
                    span: Span,
                },
                StatementNode {
                    kind: Expression(
                        ExpressionNode {
                            kind: Call {
                                func: ExpressionNode {
                                    kind: Identifier(
                                        "report",
                                    ),
                                    span: Span,
                                },
                                args: [
                                    ExpressionNode {
                                        kind: Identifier(
                                            "a",
                                        ),
                                        span: Span,
                                    },
                                ],
                            },
                            span: Span,
                        },
                    ),
                    span: Span,
                },
                StatementNode {
                    kind: AutoDecl(
                        "b",
                        TypeNode {
                            kind: Auto,
                            span: Span,
                        },
                        ExpressionNode {
                            kind: Call {
                                func: ExpressionNode {
                                    kind: Identifier(
                                        "passthrough",
                                    ),
                                    span: Span,
                                },
                                args: [
                                    ExpressionNode {
                                        kind: Identifier(
                                            "a",
                                        ),
                                        span: Span,
                                    },
                                ],
                            },
                            span: Span,
                        },
                    ),
                    span: Span,
                },
                StatementNode {
                    kind: Expression(
                        ExpressionNode {
                            kind: Call {
                                func: ExpressionNode {
                                    kind: Identifier(
                                        "report",
                                    ),
                                    span: Span,
                                },
                                args: [
                                    ExpressionNode {
                                        kind: Identifier(
                                            "b",
                                        ),
                                        span: Span,
                                    },
                                ],
                            },
                            span: Span,
                        },
                    ),
                    span: Span,
                },
                StatementNode {
                    kind: Expression(
                        ExpressionNode {
                            kind: Call {
                                func: ExpressionNode {
                                    kind: Identifier(
                                        "report",
                                    ),
                                    span: Span,
                                },
                                args: [
                                    ExpressionNode {
                                        kind: Identifier(
                                            "a",
                                        ),
                                        span: Span,
                                    },
                                ],
                            },
                            span: Span,
                        },
                    ),
                    span: Span,
                },
                StatementNode {
                    kind: Return(
                        None,
                    ),
                    span: Span,
                },
            ],
            span: Span,
            is_common: false,
            where_clause: None,
        },
    ),
]
